k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ip-api
  template:
    metadata:
      labels:
        app: ip-api
    spec:
      containers:
        - name: ip-api
          image: ip-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
