k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-api
spec:
  type: NodePort
  selector:
    app: ip-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
